// Vitest Snapshot v1

exports[`ssrRef reactivity > ssrRefs react to change in state 1`] = `
{
  "nuxt": {
    "globalRefs": {},
    "ssrRefs": {
      "name": "full name",
    },
  },
}
`;

exports[`ssrRef reactivity > ssrRefs react to constructors 1`] = `
{
  "value": bound Object {
    "testMap": Map {
      "john" => "doe",
    },
  },
}
`;

exports[`ssrRef reactivity > ssrRefs react to deep change in array state 1`] = `
{
  "nuxt": {
    "globalRefs": {},
    "ssrRefs": {
      "obj": {
        "deep": {
          "object": [
            {
              "name": "full name",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`ssrRef reactivity > ssrRefs react to deep change in object state 1`] = `
{
  "nuxt": {
    "globalRefs": {},
    "ssrRefs": {
      "obj": {
        "deep": {
          "object": {
            "name": "full name",
          },
        },
      },
    },
  },
}
`;

exports[`ssrRef reactivity > ssrRefs within multiple requests 1`] = `
{
  "nuxt": {
    "globalRefs": {},
    "ssrRefs": {
      "concurrentRef": 2,
    },
  },
}
`;
